infra/k8s/hetzner/test/patches/ingresses/jaeger.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger
  annotations:
    # TLS via cert-manager (production)
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - JAEGER_DOMAIN_PLACEHOLDER
      secretName: jaeger-test-tls
  rules:
    - host: JAEGER_DOMAIN_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-svc
                port:
                  number: 16686
